unpackaged/main/default/objects/QuoteLineItem/fields/Rate_Card_Discount_percent__c.field-meta.xml
<CustomField>
    <fullName>Rate_Card_Discount_percent__c</fullName>
    <description>US-0007824 - EU Advertising CPM Calculator</description>
    <label>Rate Card Discount %</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>