unpackaged/main/default/objects/QuoteLineItem/fields/Rate_Discount_I__c.field-meta.xml
<CustomField>
    <fullName>Rate_Discount_I__c</fullName>
    <description>US-0007824 - EU Advertising CPM Calculator</description>
    <label>Rate Discount I</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>