unpackaged/main/default/objects/QuoteLineItem/fields/Rate_Discount_II__c.field-meta.xml
<CustomField>
    <fullName>Rate_Discount_II__c</fullName>
    <description>US-0007824 - EU Advertising CPM Calculator</description>
    <label>Rate Discount II</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>