unpackaged/main/default/objects/QuoteLineItem/fields/Rebate_In_Kind__c.field-meta.xml
<CustomField>
    <fullName>Rebate_In_Kind__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0007824 - EU Advertising CPM Calculator</description>
    <label>Rebate In Kind</label>
    <type>Checkbox</type>
</CustomField>