unpackaged/main/default/objects/QuoteLineItem/fields/Rebate_In_Kind_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rebate_In_Kind_Reason__c</fullName>
    <description>US-0007824 - EU Advertising CPM Calculator</description>
    <label>Rebate In Kind (Reason)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Additional Delivery</fullName>
            </value>
            <value>
                <fullName>Compensation</fullName>
            </value>
            <value>
                <fullName>Contract Component</fullName>
            </value>
            <value>
                <fullName>On Top Service</fullName>
            </value>
            <value>
                <fullName>Added Value</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>