unpackaged/main/default/objects/QuoteLineItem/fields/Sales_Price_incl_Targeting__c.field-meta.xml
<CustomField>
    <fullName>Sales_Price_incl_Targeting__c</fullName>
    <description>US-0009260 - [Ads 2020] OLI Trigger to QLI/AP, Fields &amp; Syncing</description>
    <formula>IF( ISPICKVAL( Billing_Category__c ,&quot;CPM&quot;), SalesPriceNet__c  +  Targeting_Fee2__c , SalesPriceNet__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sales Price plus any targeting or surcharge</inlineHelpText>
    <label>Sales Price Gross</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>