unpackaged/main/default/objects/QuoteLineItem/fields/SalesPriceNet__c.field-meta.xml
<CustomField>
    <fullName>SalesPriceNet__c</fullName>
    <inlineHelpText>Sales price of the product</inlineHelpText>
    <label>Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>