unpackaged/main/default/objects/QuoteLineItem/fields/Special_Agency_Discount__c.field-meta.xml
<CustomField>
    <fullName>Special_Agency_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0007824 - EU Advertising CPM Calculator</description>
    <label>Special Agency Discount</label>
    <type>Checkbox</type>
</CustomField>