unpackaged/main/default/objects/QuoteLineItem/fields/Special_Agency_Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Special_Agency_Discount_Percent__c</fullName>
    <description>US-0007824 - EU Advertising CPM Calculator</description>
    <formula>IF(Quote.Rate_Special_Agency_Discount__c=NULL || ISPICKVAL(Billing_Category__c,&quot;CPO&quot;) || ISPICKVAL(Billing_Category__c,&quot;CPC&quot;),0,Quote.Rate_Special_Agency_Discount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Special Agency Discount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>