unpackaged/main/default/objects/QuoteLineItem/fields/Special_Agency_Discount_shadow__c.field-meta.xml
<CustomField>
    <fullName>Special_Agency_Discount_shadow__c</fullName>
    <description>US-0007824 - EU Advertising CPM Calculator</description>
    <label>Special Agency Discount % shadow</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>