unpackaged/main/default/objects/QuoteLineItem/fields/Target_CPM__c.field-meta.xml
<CustomField>
    <fullName>Target_CPM__c</fullName>
    <description>US-0007824 - EU Advertising CPM Calculator</description>
    <label>Target CPM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>