unpackaged/main/default/objects/QuoteLineItem/fields/Targeting__c.field-meta.xml
<CustomField>
    <fullName>Targeting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Targeting</label>
    <referenceTo>Targeting__c</referenceTo>
    <relationshipLabel>Quote Product</relationshipLabel>
    <relationshipName>Quote_Product1</relationshipName>
    <type>Lookup</type>
</CustomField>