unpackaged/main/default/objects/QuoteLineItem/fields/Targeting_Fee2__c.field-meta.xml
<CustomField>
    <fullName>Targeting_Fee2__c</fullName>
    <description>US-0007824 - EU Advertising CPM Calculator.
US-0009452 - [Ads 2020] Change Targeting Fee calc</description>
    <formula>IF ( AND( LEFT(Pricebook_Name__c, 2) = &quot;DE&quot;,  TEXT(Billing_Category__c)=&quot;CPM&quot;),
	CASE ( Targeting_Type__c ,
	&quot;Standard&quot;,5.00,
	&quot;Premium&quot;,10.00,
	&quot;Custom&quot;,15.00,
	&quot;Individuell&quot;,15.00,0)
 ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Targeting Fee2</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>