unpackaged/main/default/objects/QuoteLineItem/fields/Targeting_Type__c.field-meta.xml
<CustomField>
    <fullName>Targeting_Type__c</fullName>
    <description>US-0007824 - EU Advertising CPM Calculator</description>
    <label>Targeting Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Individuell</fullName>
            </value>
            <value>
                <fullName>1:1-Matching</fullName>
            </value>
            <value>
                <fullName>Base Audiences</fullName>
            </value>
            <value>
                <fullName>eAAT Audiences</fullName>
            </value>
            <value>
                <fullName>Premium Audiences</fullName>
            </value>
            <value>
                <fullName>Category</fullName>
            </value>
            <value>
                <fullName>Keyword</fullName>
            </value>
            <value>
                <fullName>eAX</fullName>
            </value>
            <value>
                <fullName>CRM Matching/Shopalike</fullName>
            </value>
            <value>
                <fullName>Rich Media</fullName>
            </value>
            <value>
                <fullName>Q4</fullName>
            </value>
            <value>
                <fullName>Cyber</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>