unpackaged/main/default/objects/QuoteLineItem/fields/Total_Price_incl_Targeting__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_incl_Targeting__c</fullName>
    <description>US-9135</description>
    <formula>Sales_Price_incl_Targeting__c * IF (ISPICKVAL(Billing_Category__c, &#39;CPM&#39;), Quantity / 1000, Quantity)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price incl Targeting</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>