unpackaged/main/default/objects/QuoteLineItem/fields/TotalAmountNet__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountNet__c</fullName>
    <formula>/*ROUND(SalesPriceNet__c, 4)* UPCF__c * Quantity*/
 Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TotalAmountNet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>