unpackaged/main/default/objects/QuoteLineItem/fields/Type_of_Takeover__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Takeover__c</fullName>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: Type of Takeover	 || 00471106 |</description>
    <label>Type of Takeover</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home Page</fullName>
            </value>
            <value>
                <fullName>My eBay</fullName>
            </value>
            <value>
                <fullName>Category Lockout</fullName>
            </value>
            <value>
                <fullName>Homepage Takeover with NPD</fullName>
            </value>
            <value>
                <fullName>Homepage Roadblock (Desktop, mweb)</fullName>
            </value>
            <value>
                <fullName>SRP</fullName>
            </value>
            <value>
                <fullName>Signout Takeover</fullName>
            </value>
            <value>
                <fullName>Order Details Page</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>