unpackaged/main/default/objects/QuoteLineItem/fields/X1P_Advertising__c.field-meta.xml
<CustomField>
    <fullName>X1P_Advertising__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0009134 - [Ads 2020] Updates to the Product Configurator - General</description>
    <label>1P Advertising</label>
    <type>Checkbox</type>
</CustomField>